--- a/index.html
+++ b/index.html
@@ -6,12 +6,61 @@
   <title>Poutch IPTV</title>
   <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5534/5534418.png" type="image/png">
-  <style>/* [style intact, pas modifié ici] */</style>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      text-align: center;
+      margin: 10px 0;
+    }
+    .toggle-mode {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #f2a900;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    #controls {
+      text-align: center;
+      padding: 10px;
+    }
+    #player-container {
+      width: 100%;
+      max-width: 1400px;
+      margin: 0 auto;
+    }
+    video {
+      width: 100%;
+      height: 80vh;
+    }
+    #channel-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 10px;
+      margin: 20px;
+    }
+    .channel {
+      background: #222;
+      padding: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .channel:hover {
+      background: #333;
+    }
+  </style>
 </head>
 <body>
   <h1>Poutch IPTV</h1>
   <button class="toggle-mode" onclick="toggleTheme()">🎥 Mode clair/sombre</button>
-  <div id="controls">[...]</div>
+  <div id="controls"></div>
   <div id="player-container">
     <video id="iptvPlayer" class="video-js vjs-default-skin" controls autoplay></video>
     <div id="channel-list"></div>
@@ -24,11 +73,43 @@
     let showOnlyFavorites = false;
     let favorites = new Set(JSON.parse(localStorage.getItem('favorites') || '[]'));
 
-    function toggleTheme() { [...]; }
-    function renderFavoritesOnly() { [...]; }
-    function renderChannels() { [...]; }
-    function loadStream(url) { [...]; }
-    function toggleFavorite(name) { [...]; }
+    function toggleTheme() {
+      const body = document.body;
+      if (body.style.backgroundColor === 'white') {
+        body.style.backgroundColor = '#000';
+        body.style.color = '#fff';
+      } else {
+        body.style.backgroundColor = 'white';
+        body.style.color = '#000';
+      }
+    }
+
+    function renderChannels() {
+      const list = document.getElementById("channel-list");
+      list.innerHTML = '';
+      const filtered = allChannels.filter(c => !showOnlyFavorites || favorites.has(c.name));
+      filtered.forEach(channel => {
+        const div = document.createElement('div');
+        div.className = 'channel';
+        div.textContent = channel.name + (favorites.has(channel.name) ? ' ⭐' : '');
+        div.onclick = () => loadStream(channel.url);
+        list.appendChild(div);
+      });
+    }
+
+    function loadStream(url) {
+      if (Hls.isSupported()) {
+        const hls = new Hls();
+        hls.loadSource(url);
+        hls.attachMedia(player.tech().el_);
+        player.play();
+      } else if (player.canPlayType('application/vnd.apple.mpegurl')) {
+        player.src({ type: 'application/x-mpegURL', src: url });
+        player.play();
+      } else {
+        alert("Votre navigateur ne supporte pas la lecture HLS.");
+      }
+    }
 
     async function loadByCategory() {
       const category = 'news';
@@ -60,7 +141,6 @@
           throw new Error('Playlist vide');
         }
       } catch (e) {
-        // Fallback de secours : flux de test
         allChannels = [{
           name: "Chaîne Test - MUX",
           url: "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8",
